tests/script_runtime_errors/subslice_neg_start/error.txt
Error: 
    2 | event[k:4]
      |       ^ Conflicting types, got integer but expected positive integer
